src/parser.output
   0  $accept : %entry% $end

   1  cmd : Form DOT
   2      | Form IF DOT
   3      | Form IF Forms DOT
   4      | IF Forms DOT
   5      | Forms QUERY
   6      | EOF

   7  Forms : Form
   8        | Form COMMA Forms

   9  Form : Part
  10       | Form INFIX0 Form
  11       | Form INFIX1 Form
  12       | Form INFIX2 Form
  13       | Form INFIX3 Form
  14       | Form INFIX4 Form
  15       | Form INFIX5 Form
  16       | Form INFIX6 Form
  17       | Form INFIX7 Form
  18       | Form INFIX8 Form
  19       | Form SBRA Form SKET
  20       | WBRA Form WKET Form
  21       | NOTFIX Form
  22       | PREFIX Form
  23       | error

  24  Part : NUM
  25       | STRING
  26       | NAME
  27       | BRA Form KET
  28       | Struct

  29  Struct : ATOM
  30         | ATOM BRA Forms KET
  31         | ATOM BRA KET
  32         | CBRA Forms CKET
  33         | CBRA CKET
  34         | BRA INFIX0 KET
  35         | BRA INFIX1 KET
  36         | BRA INFIX2 KET
  37         | BRA INFIX3 KET
  38         | BRA INFIX4 KET
  39         | BRA INFIX5 KET
  40         | BRA INFIX6 KET
  41         | BRA INFIX7 KET
  42         | BRA INFIX8 KET
  43         | BRA NOTFIX KET
  44         | BRA PREFIX KET
  45         | BRA SBRA SKET KET
  46         | BRA WBRA WKET KET
  47         | BRA INFIX0 KET BRA Forms KET
  48         | BRA INFIX1 KET BRA Forms KET
  49         | BRA INFIX2 KET BRA Forms KET
  50         | BRA INFIX3 KET BRA Forms KET
  51         | BRA INFIX4 KET BRA Forms KET
  52         | BRA INFIX5 KET BRA Forms KET
  53         | BRA INFIX6 KET BRA Forms KET
  54         | BRA INFIX7 KET BRA Forms KET
  55         | BRA INFIX8 KET BRA Forms KET
  56         | BRA NOTFIX KET BRA Forms KET
  57         | BRA PREFIX KET BRA Forms KET
  58         | BRA SBRA SKET KET BRA Forms KET
  59         | BRA WBRA WKET KET BRA Forms KET

  60  cmd : DIRECTIVE Thing
  61      | DIRECTIVE DOT
  62      | DOT

  63  Thing : NAME
  64        | ATOM
  65        | NUM
  66        | STRING
  67        | INFIX0
  68        | INFIX1
  69        | INFIX2
  70        | INFIX3
  71        | INFIX4
  72        | INFIX5
  73        | INFIX6
  74        | INFIX7
  75        | INFIX8
  76        | NOTFIX
  77        | PREFIX

  78  formula : Form

  79  %entry% : '\001' cmd
  80          | '\002' formula

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . cmd  (79)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	DIRECTIVE  shift 12
	BRA  shift 13
	CBRA  shift 14
	IF  shift 15
	DOT  shift 16
	EOF  shift 17
	.  error

	cmd  goto 18
	Form  goto 19
	Forms  goto 20
	Part  goto 21
	Struct  goto 22


state 2
	%entry% : '\002' . formula  (80)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	formula  goto 23
	Form  goto 24
	Part  goto 21
	Struct  goto 22


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	Form : error .  (23)

	.  reduce 23


state 5
	Part : NAME .  (26)

	.  reduce 26


state 6
	Struct : ATOM .  (29)
	Struct : ATOM . BRA Forms KET  (30)
	Struct : ATOM . BRA KET  (31)

	BRA  shift 25
	$end  reduce 29
	INFIX0  reduce 29
	INFIX1  reduce 29
	INFIX2  reduce 29
	INFIX3  reduce 29
	INFIX4  reduce 29
	INFIX5  reduce 29
	INFIX6  reduce 29
	INFIX7  reduce 29
	INFIX8  reduce 29
	WKET  reduce 29
	SBRA  reduce 29
	KET  reduce 29
	CKET  reduce 29
	SKET  reduce 29
	COMMA  reduce 29
	IF  reduce 29
	DOT  reduce 29
	QUERY  reduce 29


state 7
	Form : PREFIX . Form  (22)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 26
	Part  goto 21
	Struct  goto 22


state 8
	Form : NOTFIX . Form  (21)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 27
	Part  goto 21
	Struct  goto 22


state 9
	Form : WBRA . Form WKET Form  (20)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 28
	Part  goto 21
	Struct  goto 22


state 10
	Part : NUM .  (24)

	.  reduce 24


state 11
	Part : STRING .  (25)

	.  reduce 25


state 12
	cmd : DIRECTIVE . Thing  (60)
	cmd : DIRECTIVE . DOT  (61)

	NAME  shift 29
	ATOM  shift 30
	PREFIX  shift 31
	NOTFIX  shift 32
	INFIX0  shift 33
	INFIX1  shift 34
	INFIX2  shift 35
	INFIX3  shift 36
	INFIX4  shift 37
	INFIX5  shift 38
	INFIX6  shift 39
	INFIX7  shift 40
	INFIX8  shift 41
	NUM  shift 42
	STRING  shift 43
	DOT  shift 44
	.  error

	Thing  goto 45


state 13
	Part : BRA . Form KET  (27)
	Struct : BRA . INFIX0 KET  (34)
	Struct : BRA . INFIX1 KET  (35)
	Struct : BRA . INFIX2 KET  (36)
	Struct : BRA . INFIX3 KET  (37)
	Struct : BRA . INFIX4 KET  (38)
	Struct : BRA . INFIX5 KET  (39)
	Struct : BRA . INFIX6 KET  (40)
	Struct : BRA . INFIX7 KET  (41)
	Struct : BRA . INFIX8 KET  (42)
	Struct : BRA . NOTFIX KET  (43)
	Struct : BRA . PREFIX KET  (44)
	Struct : BRA . SBRA SKET KET  (45)
	Struct : BRA . WBRA WKET KET  (46)
	Struct : BRA . INFIX0 KET BRA Forms KET  (47)
	Struct : BRA . INFIX1 KET BRA Forms KET  (48)
	Struct : BRA . INFIX2 KET BRA Forms KET  (49)
	Struct : BRA . INFIX3 KET BRA Forms KET  (50)
	Struct : BRA . INFIX4 KET BRA Forms KET  (51)
	Struct : BRA . INFIX5 KET BRA Forms KET  (52)
	Struct : BRA . INFIX6 KET BRA Forms KET  (53)
	Struct : BRA . INFIX7 KET BRA Forms KET  (54)
	Struct : BRA . INFIX8 KET BRA Forms KET  (55)
	Struct : BRA . NOTFIX KET BRA Forms KET  (56)
	Struct : BRA . PREFIX KET BRA Forms KET  (57)
	Struct : BRA . SBRA SKET KET BRA Forms KET  (58)
	Struct : BRA . WBRA WKET KET BRA Forms KET  (59)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 46
	NOTFIX  shift 47
	INFIX0  shift 48
	INFIX1  shift 49
	INFIX2  shift 50
	INFIX3  shift 51
	INFIX4  shift 52
	INFIX5  shift 53
	INFIX6  shift 54
	INFIX7  shift 55
	INFIX8  shift 56
	WBRA  shift 57
	SBRA  shift 58
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 59
	Part  goto 21
	Struct  goto 22


state 14
	Struct : CBRA . Forms CKET  (32)
	Struct : CBRA . CKET  (33)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	CKET  shift 60
	.  error

	Form  goto 61
	Forms  goto 62
	Part  goto 21
	Struct  goto 22


state 15
	cmd : IF . Forms DOT  (4)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 61
	Forms  goto 63
	Part  goto 21
	Struct  goto 22


state 16
	cmd : DOT .  (62)

	.  reduce 62


state 17
	cmd : EOF .  (6)

	.  reduce 6


state 18
	%entry% : '\001' cmd .  (79)

	.  reduce 79


state 19
	cmd : Form . DOT  (1)
	cmd : Form . IF DOT  (2)
	cmd : Form . IF Forms DOT  (3)
	Forms : Form .  (7)
	Forms : Form . COMMA Forms  (8)
	Form : Form . INFIX0 Form  (10)
	Form : Form . INFIX1 Form  (11)
	Form : Form . INFIX2 Form  (12)
	Form : Form . INFIX3 Form  (13)
	Form : Form . INFIX4 Form  (14)
	Form : Form . INFIX5 Form  (15)
	Form : Form . INFIX6 Form  (16)
	Form : Form . INFIX7 Form  (17)
	Form : Form . INFIX8 Form  (18)
	Form : Form . SBRA Form SKET  (19)

	INFIX0  shift 64
	INFIX1  shift 65
	INFIX2  shift 66
	INFIX3  shift 67
	INFIX4  shift 68
	INFIX5  shift 69
	INFIX6  shift 70
	INFIX7  shift 71
	INFIX8  shift 72
	SBRA  shift 73
	COMMA  shift 74
	IF  shift 75
	DOT  shift 76
	QUERY  reduce 7


state 20
	cmd : Forms . QUERY  (5)

	QUERY  shift 77
	.  error


state 21
	Form : Part .  (9)

	.  reduce 9


state 22
	Part : Struct .  (28)

	.  reduce 28


state 23
	%entry% : '\002' formula .  (80)

	.  reduce 80


state 24
	Form : Form . INFIX0 Form  (10)
	Form : Form . INFIX1 Form  (11)
	Form : Form . INFIX2 Form  (12)
	Form : Form . INFIX3 Form  (13)
	Form : Form . INFIX4 Form  (14)
	Form : Form . INFIX5 Form  (15)
	Form : Form . INFIX6 Form  (16)
	Form : Form . INFIX7 Form  (17)
	Form : Form . INFIX8 Form  (18)
	Form : Form . SBRA Form SKET  (19)
	formula : Form .  (78)

	INFIX0  shift 64
	INFIX1  shift 65
	INFIX2  shift 66
	INFIX3  shift 67
	INFIX4  shift 68
	INFIX5  shift 69
	INFIX6  shift 70
	INFIX7  shift 71
	INFIX8  shift 72
	SBRA  shift 73
	$end  reduce 78


state 25
	Struct : ATOM BRA . Forms KET  (30)
	Struct : ATOM BRA . KET  (31)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	KET  shift 78
	CBRA  shift 14
	.  error

	Form  goto 61
	Forms  goto 79
	Part  goto 21
	Struct  goto 22


state 26
	Form : Form . INFIX0 Form  (10)
	Form : Form . INFIX1 Form  (11)
	Form : Form . INFIX2 Form  (12)
	Form : Form . INFIX3 Form  (13)
	Form : Form . INFIX4 Form  (14)
	Form : Form . INFIX5 Form  (15)
	Form : Form . INFIX6 Form  (16)
	Form : Form . INFIX7 Form  (17)
	Form : Form . INFIX8 Form  (18)
	Form : Form . SBRA Form SKET  (19)
	Form : PREFIX Form .  (22)

	.  reduce 22


state 27
	Form : Form . INFIX0 Form  (10)
	Form : Form . INFIX1 Form  (11)
	Form : Form . INFIX2 Form  (12)
	Form : Form . INFIX3 Form  (13)
	Form : Form . INFIX4 Form  (14)
	Form : Form . INFIX5 Form  (15)
	Form : Form . INFIX6 Form  (16)
	Form : Form . INFIX7 Form  (17)
	Form : Form . INFIX8 Form  (18)
	Form : Form . SBRA Form SKET  (19)
	Form : NOTFIX Form .  (21)

	INFIX0  shift 64
	INFIX1  shift 65
	INFIX2  shift 66
	INFIX3  shift 67
	INFIX4  shift 68
	INFIX5  shift 69
	INFIX6  shift 70
	INFIX7  shift 71
	INFIX8  shift 72
	SBRA  shift 73
	$end  reduce 21
	WKET  reduce 21
	KET  reduce 21
	CKET  reduce 21
	SKET  reduce 21
	COMMA  reduce 21
	IF  reduce 21
	DOT  reduce 21
	QUERY  reduce 21


state 28
	Form : Form . INFIX0 Form  (10)
	Form : Form . INFIX1 Form  (11)
	Form : Form . INFIX2 Form  (12)
	Form : Form . INFIX3 Form  (13)
	Form : Form . INFIX4 Form  (14)
	Form : Form . INFIX5 Form  (15)
	Form : Form . INFIX6 Form  (16)
	Form : Form . INFIX7 Form  (17)
	Form : Form . INFIX8 Form  (18)
	Form : Form . SBRA Form SKET  (19)
	Form : WBRA Form . WKET Form  (20)

	INFIX0  shift 64
	INFIX1  shift 65
	INFIX2  shift 66
	INFIX3  shift 67
	INFIX4  shift 68
	INFIX5  shift 69
	INFIX6  shift 70
	INFIX7  shift 71
	INFIX8  shift 72
	WKET  shift 80
	SBRA  shift 73
	.  error


state 29
	Thing : NAME .  (63)

	.  reduce 63


state 30
	Thing : ATOM .  (64)

	.  reduce 64


state 31
	Thing : PREFIX .  (77)

	.  reduce 77


state 32
	Thing : NOTFIX .  (76)

	.  reduce 76


state 33
	Thing : INFIX0 .  (67)

	.  reduce 67


state 34
	Thing : INFIX1 .  (68)

	.  reduce 68


state 35
	Thing : INFIX2 .  (69)

	.  reduce 69


state 36
	Thing : INFIX3 .  (70)

	.  reduce 70


state 37
	Thing : INFIX4 .  (71)

	.  reduce 71


state 38
	Thing : INFIX5 .  (72)

	.  reduce 72


state 39
	Thing : INFIX6 .  (73)

	.  reduce 73


state 40
	Thing : INFIX7 .  (74)

	.  reduce 74


state 41
	Thing : INFIX8 .  (75)

	.  reduce 75


state 42
	Thing : NUM .  (65)

	.  reduce 65


state 43
	Thing : STRING .  (66)

	.  reduce 66


state 44
	cmd : DIRECTIVE DOT .  (61)

	.  reduce 61


state 45
	cmd : DIRECTIVE Thing .  (60)

	.  reduce 60


state 46
	Form : PREFIX . Form  (22)
	Struct : BRA PREFIX . KET  (44)
	Struct : BRA PREFIX . KET BRA Forms KET  (57)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	KET  shift 81
	CBRA  shift 14
	.  error

	Form  goto 26
	Part  goto 21
	Struct  goto 22


state 47
	Form : NOTFIX . Form  (21)
	Struct : BRA NOTFIX . KET  (43)
	Struct : BRA NOTFIX . KET BRA Forms KET  (56)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	KET  shift 82
	CBRA  shift 14
	.  error

	Form  goto 27
	Part  goto 21
	Struct  goto 22


state 48
	Struct : BRA INFIX0 . KET  (34)
	Struct : BRA INFIX0 . KET BRA Forms KET  (47)

	KET  shift 83
	.  error


state 49
	Struct : BRA INFIX1 . KET  (35)
	Struct : BRA INFIX1 . KET BRA Forms KET  (48)

	KET  shift 84
	.  error


state 50
	Struct : BRA INFIX2 . KET  (36)
	Struct : BRA INFIX2 . KET BRA Forms KET  (49)

	KET  shift 85
	.  error


state 51
	Struct : BRA INFIX3 . KET  (37)
	Struct : BRA INFIX3 . KET BRA Forms KET  (50)

	KET  shift 86
	.  error


state 52
	Struct : BRA INFIX4 . KET  (38)
	Struct : BRA INFIX4 . KET BRA Forms KET  (51)

	KET  shift 87
	.  error


state 53
	Struct : BRA INFIX5 . KET  (39)
	Struct : BRA INFIX5 . KET BRA Forms KET  (52)

	KET  shift 88
	.  error


state 54
	Struct : BRA INFIX6 . KET  (40)
	Struct : BRA INFIX6 . KET BRA Forms KET  (53)

	KET  shift 89
	.  error


state 55
	Struct : BRA INFIX7 . KET  (41)
	Struct : BRA INFIX7 . KET BRA Forms KET  (54)

	KET  shift 90
	.  error


state 56
	Struct : BRA INFIX8 . KET  (42)
	Struct : BRA INFIX8 . KET BRA Forms KET  (55)

	KET  shift 91
	.  error


state 57
	Form : WBRA . Form WKET Form  (20)
	Struct : BRA WBRA . WKET KET  (46)
	Struct : BRA WBRA . WKET KET BRA Forms KET  (59)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	WKET  shift 92
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 28
	Part  goto 21
	Struct  goto 22


state 58
	Struct : BRA SBRA . SKET KET  (45)
	Struct : BRA SBRA . SKET KET BRA Forms KET  (58)

	SKET  shift 93
	.  error


state 59
	Form : Form . INFIX0 Form  (10)
	Form : Form . INFIX1 Form  (11)
	Form : Form . INFIX2 Form  (12)
	Form : Form . INFIX3 Form  (13)
	Form : Form . INFIX4 Form  (14)
	Form : Form . INFIX5 Form  (15)
	Form : Form . INFIX6 Form  (16)
	Form : Form . INFIX7 Form  (17)
	Form : Form . INFIX8 Form  (18)
	Form : Form . SBRA Form SKET  (19)
	Part : BRA Form . KET  (27)

	INFIX0  shift 64
	INFIX1  shift 65
	INFIX2  shift 66
	INFIX3  shift 67
	INFIX4  shift 68
	INFIX5  shift 69
	INFIX6  shift 70
	INFIX7  shift 71
	INFIX8  shift 72
	SBRA  shift 73
	KET  shift 94
	.  error


state 60
	Struct : CBRA CKET .  (33)

	.  reduce 33


state 61
	Forms : Form .  (7)
	Forms : Form . COMMA Forms  (8)
	Form : Form . INFIX0 Form  (10)
	Form : Form . INFIX1 Form  (11)
	Form : Form . INFIX2 Form  (12)
	Form : Form . INFIX3 Form  (13)
	Form : Form . INFIX4 Form  (14)
	Form : Form . INFIX5 Form  (15)
	Form : Form . INFIX6 Form  (16)
	Form : Form . INFIX7 Form  (17)
	Form : Form . INFIX8 Form  (18)
	Form : Form . SBRA Form SKET  (19)

	INFIX0  shift 64
	INFIX1  shift 65
	INFIX2  shift 66
	INFIX3  shift 67
	INFIX4  shift 68
	INFIX5  shift 69
	INFIX6  shift 70
	INFIX7  shift 71
	INFIX8  shift 72
	SBRA  shift 73
	COMMA  shift 74
	KET  reduce 7
	CKET  reduce 7
	DOT  reduce 7
	QUERY  reduce 7


state 62
	Struct : CBRA Forms . CKET  (32)

	CKET  shift 95
	.  error


state 63
	cmd : IF Forms . DOT  (4)

	DOT  shift 96
	.  error


state 64
	Form : Form INFIX0 . Form  (10)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 97
	Part  goto 21
	Struct  goto 22


state 65
	Form : Form INFIX1 . Form  (11)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 98
	Part  goto 21
	Struct  goto 22


state 66
	Form : Form INFIX2 . Form  (12)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 99
	Part  goto 21
	Struct  goto 22


state 67
	Form : Form INFIX3 . Form  (13)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 100
	Part  goto 21
	Struct  goto 22


state 68
	Form : Form INFIX4 . Form  (14)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 101
	Part  goto 21
	Struct  goto 22


state 69
	Form : Form INFIX5 . Form  (15)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 102
	Part  goto 21
	Struct  goto 22


state 70
	Form : Form INFIX6 . Form  (16)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 103
	Part  goto 21
	Struct  goto 22


state 71
	Form : Form INFIX7 . Form  (17)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 104
	Part  goto 21
	Struct  goto 22


state 72
	Form : Form INFIX8 . Form  (18)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 105
	Part  goto 21
	Struct  goto 22


state 73
	Form : Form SBRA . Form SKET  (19)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 106
	Part  goto 21
	Struct  goto 22


state 74
	Forms : Form COMMA . Forms  (8)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 61
	Forms  goto 107
	Part  goto 21
	Struct  goto 22


state 75
	cmd : Form IF . DOT  (2)
	cmd : Form IF . Forms DOT  (3)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	DOT  shift 108
	.  error

	Form  goto 61
	Forms  goto 109
	Part  goto 21
	Struct  goto 22


state 76
	cmd : Form DOT .  (1)

	.  reduce 1


state 77
	cmd : Forms QUERY .  (5)

	.  reduce 5


state 78
	Struct : ATOM BRA KET .  (31)

	.  reduce 31


state 79
	Struct : ATOM BRA Forms . KET  (30)

	KET  shift 110
	.  error


state 80
	Form : WBRA Form WKET . Form  (20)

	error  shift 4
	NAME  shift 5
	ATOM  shift 6
	PREFIX  shift 7
	NOTFIX  shift 8
	WBRA  shift 9
	NUM  shift 10
	STRING  shift 11
	BRA  shift 13
	CBRA  shift 14
	.  error

	Form  goto 111
	Part  goto 21
	Struct  goto 22


state 81
	Struct : BRA PREFIX KET .  (44)
	Struct : BRA PREFIX KET . BRA Forms KET  (57)

	BRA  shift 112
	$end  reduce 44
	INFIX0  reduce 44
	INFIX1  reduce 44
	INFIX2  reduce 44
	INFIX3  reduce 44
	INFIX4  reduce 44
	INFIX5  reduce 44
	INFIX6  reduce 44
	INFIX7  reduce 44
	INFIX8  reduce 44
	WKET  reduce 44
	SBRA  reduce 44
	KET  reduce 44
	CKET  reduce 44
	SKET  reduce 44
	COMMA  reduce 44
	IF  reduce 44
	DOT  reduce 44
	QUERY  reduce 44


state 82
	Struct : BRA NOTFIX KET .  (43)
	Struct : BRA NOTFIX KET . BRA Forms KET  (56)

	BRA  shift 113
	$end  reduce 43
	INFIX0  reduce 43
	INFIX1  reduce 43
	INFIX2  reduce 43
	INFIX3  reduce 43
	INFIX4  reduce 43
	INFIX5  reduce 43
	INFIX6  reduce 43
	INFIX7  reduce 43
	INFIX8  reduce 43
	WKET  reduce 43
	SBRA  reduce 43
	KET  reduce 43
	CKET  reduce 43
	SKET  reduce 43
	COMMA  reduce 43
	IF  reduce 43
	DOT  reduce 43
	QUERY  reduce 43


state 83
	Struct : BRA INFIX0 KET .  (34)
	Struct : BRA INFIX0 KET . BRA Forms KET  (47)
